--- a/stable/supervisord.conf
+++ b/stable/supervisord.conf
@@ -2,8 +2,17 @@
 loglevel=critical
 user=root
 
+[program:app]
+command=/app/env/bin/gunicorn -b 0.0.0.0:8000 -w 4 -t 120 frappe.app:application --preload
+autostart=true
+autorestart=false
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+
 [program:scheduler]
-command=scheduler
+command=/usr/bin/bench scheduler
 autostart=true
 autorestart=false
 stdout_logfile=/dev/stdout
@@ -12,7 +21,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:worker-default]
-command=worker-default
+command=/usr/bin/bench worker --queue default
 autostart=true
 autorestart=false
 stdout_logfile=/dev/stdout
@@ -22,6 +31,7 @@ stderr_logfile_maxbytes=0
 
 [program:worker-long]
 command=worker-long
+command=/usr/bin/bench worker --queue long
 autostart=true
 autorestart=false
 stdout_logfile=/dev/stdout
@@ -30,7 +40,25 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:worker-short]
-command=worker-short
+command=/usr/bin/bench worker --queue short
+autostart=true
+autorestart=false
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+
+[program:node-socketio]
+command=node /app/apps/frappe/socketio.js
+autostart=true
+autorestart=false
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+
+[program:nginx]
+command=/bin/sh /scripts/nginx.sh
 autostart=true
 autorestart=false
 stdout_logfile=/dev/stdout
