--- a/stable/supervisord.conf
+++ b/stable/supervisord.conf
@@ -1,11 +1,24 @@
 [supervisord]
-loglevel=critical
 user=root
+logfile=/var/log/supervisord.log
+nodaemon=true
+loglevel=info
+
+[program:nginx]
+command=/usr/sbin/nginx -g "daemon off;"
+username=nobody
+priority=900
+autostart=true
+autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 
 [program:app]
 command=/app/env/bin/gunicorn -b 0.0.0.0:8000 -w 4 -t 120 frappe.app:application --preload
 autostart=true
-autorestart=false
+autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -14,7 +27,7 @@ stderr_logfile_maxbytes=0
 [program:scheduler]
 command=/usr/bin/bench scheduler
 autostart=true
-autorestart=false
+autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -23,7 +36,7 @@ stderr_logfile_maxbytes=0
 [program:worker-default]
 command=/usr/bin/bench worker --queue default
 autostart=true
-autorestart=false
+autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -33,7 +46,7 @@ stderr_logfile_maxbytes=0
 command=worker-long
 command=/usr/bin/bench worker --queue long
 autostart=true
-autorestart=false
+autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -42,7 +55,7 @@ stderr_logfile_maxbytes=0
 [program:worker-short]
 command=/usr/bin/bench worker --queue short
 autostart=true
-autorestart=false
+autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -51,16 +64,7 @@ stderr_logfile_maxbytes=0
 [program:node-socketio]
 command=node /app/apps/frappe/socketio.js
 autostart=true
-autorestart=false
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-
-[program:nginx]
-command=/bin/sh /scripts/nginx.sh
-autostart=true
-autorestart=false
+autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
